Unused -Xlog tag sequences are silently ignored.

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: None
    • Component/s: hotspot
    • svc
    • b137
    • generic
    • generic

      If an -Xlog option specifies a tag sequence, but there are no logging statements in the code that match that sequence, the command line sequence is silently ignored. There needs to be feedback for this situation; users need to be informed that their logging requests will do nothing, to avoid surprises and wasting their time.

            Assignee:
            Marcus Larsson (Inactive)
            Reporter:
            Kim Barrett
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: