8150894: Unused -Xlog tag sequences are silently ignored

Reviewed-by: rehn, sla